<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Generic Strings -->
    <string name="insert_menu_name">Inserir</string>
    <string name="empyt"></string>

    <!-- Home Strings -->
    <string name="home_count_default">Selecione a \n      data</string>
    <string name="home_event_name_default">Selecione o nome</string>
    <string name="home_budget_title">Orçamento</string>
    <string name="home_budget_total">Total</string>
    <string name="home_budget_spent">Gasto</string>
    <string name="home_available_title">Disponivel</string>
    <string name="home_tasks_title">Tarefas</string>
    <string name="app_name">Casorio</string>
    <string name="menu_name">Opções</string>
    <string name="action_settings">Settings</string>
    <string name="title_guests">Convidados</string>
    <string name="title_remimders">Lembretes</string>
    <string name="title_expenses">Despesas</string>
    <string name="title_tasks">Tarefas</string>
    <string name="pending_tasks_text">pendentes</string>
    <string name="completed_tasks_text">concluidas</string>
    <string name="percentage_tasks_text">das tarefas concluidas</string>
    <string name="remaining_days_text">dias restantes</string>

    <string-array name="home_menu_entries">
        <item>Home</item>
        <item>Convidados</item>
        <item>Tarefas</item>
        <item>Orçamento</item>
        <item>Configurações</item>
    </string-array>

    <!-- Preferences Strings -->
    <string name="settings_section_title">Configurações gerais</string>
    <string name="settings_date_preference_title">Data do casamento</string>
    <string name="key_budget">budget</string>
    <string name="key_evt_name">eventName</string>
    <string name="key_image">imageKey</string>
    <string name="setting_budget_title">Orçamento</string>
    <string name="setting_budget_summary">Limite de gastos</string>
    <string name="setting_event_title">Nome do casamento</string>
    <string name="setting_event_summary">Adicione um nome para o seu casamento</string>

    <!-- Validation error messages -->
    <string name="required_field">campo necessário</string>
    <string name="invalid_email">email inválido</string>
    <string name="invalid_number">somente valores numéricos</string>
    <string name="invalid_phone">telefone inválido</string>

    <!-- Guest related strings -->
    <string name="action_add_guest">Adicionar convidado</string>
    <string name="action_guest_details">Settings</string>
    <string name="guest_list_counter">Total de convidados: </string>
    <string name="list_guests_header_title">Lista de convidados</string>
    <string name="list_guests_header_additional_guests">Convidados adicionais</string>
    <string name="guest_confirmed_status">Presença confirmada</string>
    <string name="guest_pending_status">Envio pendente</string>
    <string name="guest_canceled">Envio pendente</string>
    <string name="guest_not_going">Não comparecera</string>
    <string name="guest_invite_number_image_description">Numero de convidados</string>
    <string name="guest_info_image_description">Informações do convidado</string>
    <string name="guest_insert_name_hint">Nome</string>
    <string name="guest_insert_email_hint">Email</string>
    <string name="guest_insert_guest_type_hint">Relacão</string>
    <string name="guest_insert_status_radio_group_title">Confirmado?</string>
    <string name="guest_insert_status_radio_option_yes">Sim</string>
    <string name="guest_insert_status_radio_option_no">Não</string>
    <string name="guest_insert_status_radio_option_maybe">Talvez</string>
    <string name="guest_insert_additional_hint">Nº de convidados adicionais</string>
    <string name="guest_inserted_confirmation_message">Convidado adicionado</string>
    <string name="guest_updated_confirmation_message">Convidado atualizado</string>
    <string name="guest_details_header_title">Detalhes do convidado</string>
    <string name="guest_details_name">Nome</string>
    <string name="guest_details_email">E-mail</string>
    <string name="guest_details_type">Tipo</string>
    <string name="guest_details_additional">N° de convidados adicionais</string>
    <string name="guest_details_status">Status</string>
    <string name="guest_details_delete_dialog_title">Remover convidado</string>
    <string name="guest_details_delete_dialog_message">Você tem certeza que deseja remover o convidado?</string>

    <string-array name="guest_type_options">
        <item>Amigo</item>
        <item>Padrinho</item>
        <item>Parente</item>
    </string-array>

    <!-- Task related strings -->

    <string name="action_add_task">Adicionar tarefa</string>
    <string name="action_call_create_task">Adicionar tarefa</string>
    <string name="task_list_header_title">Lista de Tarefas</string>
    <string name="task_category_spinner_hint">Categoria</string>
    <string name="task_name_hint">Titulo</string>
    <string name="task_due_date_title">Data de conclusão</string>
    <string name="task_note_title">Nota</string>
    <string name="task_coast_title">Custo</string>
    <string name="task_status_title">Tarefa finalizada?</string>
    <string name="task_reminder_content_descrption"></string>
    <string name="task_reminder_new_reminder_title">Novo lembrete</string>
    <string name="task_details_header_title">Detalhes da tarefa</string>
    <string name="task_details_title_title">Titulo da tarefa</string>
    <string name="task_details_category_title">Categoria</string>
    <string name="task_details_date_title">Data de conclusão</string>
    <string name="task_details_coast_title">Custo</string>
    <string name="task_details_note_title">Notas</string>
    <string name="task_details_delete_dialog_title">Remover tarefa</string>
    <string name="task_details_delete_dialog_message">Você tem certeza que deseja remover a tarefa?</string>

        <string-array name="predefined_tasks">
        <item>Cabeleleiro</item>
        <item>Maquiadora</item>
        <item>Manicure e Pedicure</item>
        <item>Dia da noiva</item>
        
        <item>DJ</item>
        <item>Banda</item>
        <item>Projetores de video</item>
        <item>Audio</item>
        
        <item>Bouquet</item>
        <item>Decoração da Igreja</item>
        <item>Decoração do Buffet</item>
        
        <item>Bartender</item>
        <item>Bebidas</item>
        <item>Bolo</item>
        <item>Petiscos</item>
        
        <item>Lembranças</item>
        <item>Bem casados</item>
        
        <item>Locação da Igreja</item>
        <item>Locação do Buffet</item>
        <item>Hotel para convidados</item>
        
        <item>Fotografia</item>
        <item>Video</item>
        <item>Album</item>
        <item>Making-off</item>
        
        <item>Consultora</item>
        
        <item>Passagens</item>
        <item>Reserva de hoteis</item>
        <item>Serviço de translado</item>
        <item>Passeios</item>
        
        <item>Agenda da cerimonia</item>
        <item>Livro de convidados</item>
        <item>Convites</item>
        <item>Cardápio para mesas</item>
        <item>Cartões de agradecimento</item>
        
    </string-array>
    <!-- Categories related strings -->

    <string-array name="task_category_options">
        <item>Beleza</item>
        <item>Balada</item>
        <item>Decoração</item>
        <item>Buffet</item>
        <item>Lembranças</item>
        <item>Locais</item>
        <item>Fotografia</item>
        <item>Consultoria</item>
        <item>Lua de Mel</item>
        <item>Diversos</item>
    </string-array>

    <string name="category_list_header_title">Lista de Categorias</string>
    <string name="category_list_status_remaining">Saldo positivo</string>
    <string name="category_list_status_over">Saldo negativo</string>
    <string name="category_insert_name_hint">Nome da categoria</string>
    <string name="category_insert_budget_hint">Orçamento da categoria</string>
    <string name="category_insert_header_title">Nova categoria</string>
    <string name="category_insert_created">Categoria criada</string>
    <string name="category_insert_updated">Categoria Atualizada</string>
    <string name="category_insert_deleted">Categoria removida</string>

</resources>