<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/home_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_count_default"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/home_sumary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_budget_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/home_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tasks_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>
