<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@android:color/white" >

        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/category_create_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:text="@string/category_insert_header_title"
            android:textColor="#a08185"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/categories_create_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/category_insert_name_hint"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/categories_create_coast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/category_insert_budget_hint"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>